# glowsquid

./: .deepsource.toml  .editorconfig  .envrc  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  .typesafe-i18n.json  .yarnrc.yml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  eslint.config.js  flake.nix  index.html  inlang.config.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  preact.hooks.v10.5.14-77d3ae39.js  preact.v10.5.14-e12e4a59.js  project.inlang.json  svelte.config.js  theme.js  tsconfig.base.json  turbo.json  uno.config.cjs  uno.config.mjs  unocssPlugin.js  vite.config.ts  workspace.json  xo.config.cjs
.extra/: prisma-language-server
.github/: dependabot.yml
.github/actions/: ci.yml
.github/workflows/: ci.yml  codeql-analysis.yml  deployDocs.yaml
.husky/: commit-msg
.nlsp-settings/: rust_analyzer.json
.storybook/: main.cjs  main.js
.yarn/: build-state.yml
_astro/: common-q47Sd.css  index-Z22yIpj.css
_astro/src/components/: DocSidebar.js  ThemeToggle.js
_astro_frontend/hydrate/: idle.js
_snowpack/pkg/: @astrojs.renderer-preact.client.v0.1.3.js
adapters/: .eslintrc.js  package.json
apps/.svelte-kit/: ambient.d.ts
apps/client/: Cargo.toml  project.json  tauri.conf.json
apps/client/src/: main.rs
apps/docs/: astro.config.mjs  project.json
apps/docs-e2e/: project.json
apps/docs/src/layouts/: BaseLayout.astro
apps/frontend/: .eslintrc.cjs  eslint.config.js  package.json  project.json  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/frontend-e2e/: cypress.config.ts  project.json
apps/frontend/src/: app.css  app.d.ts  app.dark.css  app.html
apps/glow-ui-e2e/: cypress.json  project.json
apps/launcher/: .eslintrc.cjs  .gitignore  package.json  project.json  svelte.config.js  tsconfig.spec.json
apps/oxidize/: .gitignore  Cargo.toml  deny.toml  package.json  project.json  tauri.conf.json
apps/oxidize/.cargo/: config.toml
apps/oxidize/prisma/: Cargo.toml  dev.db  dev.db-journal  schema.prisma
apps/oxidize/prisma/migrations/20220528133545_init/: migration.sql
apps/oxidize/prisma/migrations/20220528170211_accounts_must_be_unique/: migration.sql
apps/oxidize/prisma/migrations/20220528190943_remove_uniq/: migration.sql
apps/oxidize/prisma/migrations/20220714190325_update_mods_in_modpack_id/: migration.sql
apps/oxidize/src/: auth.rs  commands.rs  error.rs  internal_errors.rs  lib.rs  main.rs  playerdb.rs  prisma.rs  structs.rs
apps/oxidize/src-tauri/: Cargo.toml  tauri.conf.json
apps/oxidize/tests/: auth.rs  playerdb.rs
apps/server/: Cargo.toml  README.md  package.json  project.json  wrangler.toml
apps/server/src/: lib.rs  microsoft.rs  mods.rs  query.rs
apps/tnt/: .eslintrc.cjs  .gitignore  .typesafe-i18n.json  package.json  project.json  svelte.config.js  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.spec.json  vite.config.js  wdio.conf.cjs
apps/tnt/src/: app.d.ts  hooks.js
apps/website/: .env  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  package.json  project.json  svelte.config.js  tsconfig.json  tsconfig.spec.json  vite.config.js
apps/website/src/: app.d.ts  app.html  env.d.ts
docs/: astro.config.mjs  package-lock.json  package.json  tailwind.config.js
docs/public/style/: global.css  home.css
docs/src/blogs/: hahayes.md  yeetus.md
docs/src/components/: Head.astro  Post.astro
docs/src/layouts/: Main.astro
docs/src/pages/: $blog.astro  blogs.astro  index.md
example/: index.html
getting-started/: index.html
launcher/: .eslintrc.js  LICENSE  README.md  ava.config.js  builder.config.js  makefile  package.json  svelte.config.js  vetur.config.js
launcher/.electron-nuxt/: index.js
launcher/.electron-nuxt/renderer/: nuxt.config.js
launcher/.github/workflows/: build.yml
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: main.rs
launcher/src/lib/: store.ts
launcher/src/main/: BrowserWinHandler.ts  index.dev.ts  index.ts  mainWindow.ts  tsconfig.json
launcher/src/renderer/: index.d.ts  nuxt.config.js  tsconfig.json
launcher/src/routes/: __layout.svelte  index.svelte
launcher/src/types/: DownloadProgress.ts  FabricLoaderVersion.ts  FabricVersion.ts  Ipc.ts  Mod.ts  ModFile.ts  ModList.ts  ModResult.ts  ModVersion.ts  Modpack.ts  News.ts  NewsType.ts  TeamMember.ts  User.ts
launcher/test/e2e/: ava.config.js  helpers.js
launcher/test/unit/: ava.config.js  setup.js
libs/adapter/: README.md  jest.config.js  package.json  project.json
libs/copper/: .gitignore  Cargo.toml  README.md  project.json
libs/copper/examples/: asset_downloader.rs  auth.rs  full_launch.rs
libs/copper/src/: downloader.rs  launcher.rs  lib.rs  merger.rs  parser.rs
libs/copper/src/assets/: asset_index.rs  client.rs  mod.rs  version.rs
libs/copper/src/auth/: errors.rs  mod.rs  structs.rs
libs/eslint-config/: .prettierrc  index.js  package.json  tsconfig.eslint.json
libs/glow-ui/: .eslintrc.cjs  .eslintrc.js  .gitignore  README.md  package.json  project.json  svelte.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.js  vitest.config.ts
libs/glow-ui/.storybook/: main.cjs  main.js
libs/glow-ui/src/: app.d.ts  app.html  index.ts  types.ts
libs/i18n/: README.md  project.json
libs/i18n/src/: index.ts
libs/tauri-plugin-copper/: README.md  eslint.config.js  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
libs/tauri-plugin-copper/src/: index.ts
libs/tauri_plugin_copper/: Cargo.toml  project.json
libs/tauri_plugin_copper/src/: lib.rs
src/: app.css  app.d.ts  app.dark.css  index.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/i18n/: i18n-types.ts
src/i18n/en/: index.ts
src/lib/components/: Input.svelte  Instance.svelte  button.svelte  icon.svelte  input.svelte  instance.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  account-dropdown.svelte
src/routes/(instances)/: +layout.svelte  +layout.ts  +page.svelte
(+131 files in other folders)
