
[workspace]
members = ['apps/client', 'libs/copper', 'libs/tauri_plugin_copper']
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
tauri = { version = "1.4.1", features = [] }

specta = { version = "=2.0.0-rc.1", features = ["tauri", "functions"] }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", branch = "v2", features = [
  "typescript",
] }

[profile.release]
lto = true
