[package]
name = "client"
version = "0.1.0"
description = "Glowsquids launcher"
authors = ["Suyashtnt <suyashtnt@gmail.com>"]
license = "MIT"
repository = "https://github.com/glowsquid-launcher/glowsquid/"
default-run = "client"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

specta.workspace = true
tauri-specta.workspace = true

tauri_plugin_copper = { path = "../../libs/tauri_plugin_copper" }
copper = { path = "../../libs/copper" }

tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
iota-crypto = { version = "0.23.0", default-features = false, features = [
  "blake2b",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
