[package]
name = "glowsquid"
version = "0.1.0"
description = "The glowsquid launcher backend"
authors = ["suyashtnt, redcreeper1485"]
license = "MIT"
repository = "https://github.com/glowsquid-launcher/glowsquid"
default-run = "glowsquid"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.10"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", version = "*" }

[dependencies.tauri]
version = "1.0.0-rc.8"
features = ["api-all"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "fat"
codegen-units = 1
incremental = true
debug = 0
