[package]
name = "glowsquid"
version = "0.1.0"
description = "The glowsquid launcher backend"
authors = ["suyashtnt, redcreeper1485"]
license = "MIT"
repository = "https://github.com/glowsquid-launcher/glowsquid"
default-run = "glowsquid"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
url = "2.2.2"
pretty_env_logger = "0.4.0"
tokio = { version = "1.18.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
wiremock = "0.5"
thiserror = "1.0.31"
tempfile = "3.3.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", version = "*" }

[dependencies.tauri]
version = "1.0.0-rc.10"
features = ["api-all"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "fat"
codegen-units = 1
incremental = true
debug = 0
