[package]
name = "glowsquid"
version = "0.1.0"
description = "The glowsquid launcher backend"
authors = ["suyashtnt, redcreeper1485"]
license = "MIT"
repository = "https://github.com/glowsquid-launcher/glowsquid"
default-run = "glowsquid"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.13", features = [] }

[dev-dependencies]
test-context = "0.1"
async-trait = "0.1"

[dependencies]
serde_json = "1"
url = "2"
pretty_env_logger = "0.4.0"
tokio = { version = "1.19", features = ["macros", "parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "native-tls-crate"] }
wiremock = "0.5"
thiserror = "1"
tempfile = "3.3"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.1" }

[dependencies.tauri]
version = "1.0.0-rc.14"
features = ["api-all"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"       # About the same performance as "fat" without the extreme compilation time increase
codegen-units = 1
incremental = true
debug = 0
