[package]
name = "copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Minecraft launcher: rust edition"
documentation = "https://docs.rs/copper"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/glowsquid#readme"
repository = "https://github.com/glowsquid-launcher/glowsquid"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.35", default-features = false, features = ["std"] }
derive_builder = { version = "0.20.0", features = ["clippy"] }
dunce = "1.0.4"
error-stack = { version = "0.4.1", features = ["spantrace"] }
futures = "0.3.30"
itertools = "0.12.1"
oauth2 = "4.4.2"
reqwest = { version = "0.11.26", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
serde.workspace = true
serde_json.workspace = true
test-case = "3.3.1"
tokio = { version = "1.36.0", features = ["fs", "process", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
veil = "0.1.7"
async-trait = "0.1.78"

[dev-dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
java-locator = "0.1.5"

# why do you have to do this mojang
[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.20", features = ["kernel"] }
