[package]
name = "tauri_plugin_copper"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Copper"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

copper = { path = "../copper" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
