[package]
name = "tauri_plugin_copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Tauri plugin for Copper"
documentation = "https://docs.rs/copper"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/glowsquid#readme"
repository = "https://github.com/glowsquid-launcher/glowsquid"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

specta.workspace = true
tauri-specta.workspace = true

copper = { path = "../copper" }
